# ChangeLog for net-im/leechcraft-azoth
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.36 2012/11/27 13:57:14 pinkbyte Exp $

  27 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft-azoth-9999.ebuild,
  metadata.xml:
  Use global USE-flags, where it is possible, fix description for old flags,
  wrt bug #402833

  10 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft-azoth-9999.ebuild,
  metadata.xml:
  Add shell command executor plugin support

  20 Oct 2012; Sergey Popov <pinkbyte@gentoo.org>
  leechcraft-azoth-0.5.70.ebuild, leechcraft-azoth-0.5.75-r1.ebuild,
  leechcraft-azoth-0.5.80.ebuild, leechcraft-azoth-0.5.85.ebuild:
  Fix net-libs/libotr dependency wrt bug #438958

*leechcraft-azoth-0.5.85 (08 Oct 2012)

  08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org>
  +leechcraft-azoth-0.5.85.ebuild:
  Bump LeechCraft to 0.5.85, thanks to 0xd34df00d

  06 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft-azoth-9999.ebuild:
  Remove USE-flag dependency on net-libs/qxmpp-9999, 'extras' USE-flag was
  dropped from it earlier

*leechcraft-azoth-0.5.80 (13 Aug 2012)

  13 Aug 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.5.80.ebuild:
  Bump LeechCraft to 0.5.80, thanks to 0xd34df00d

*leechcraft-azoth-0.5.75-r1 (10 Aug 2012)

  10 Aug 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.5.75-r1.ebuild, -leechcraft-azoth-0.5.75.ebuild,
  leechcraft-azoth-9999.ebuild:
  Require at least one style plugin to be enabled, bug #430728.

  07 Aug 2012; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-azoth-9999.ebuild, metadata.xml:
  Add birthdaynotifier use to 9999

*leechcraft-azoth-0.5.75 (19 Jul 2012)

  19 Jul 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.5.75.ebuild, -leechcraft-azoth-0.4.99.ebuild,
  -leechcraft-azoth-0.5.0.ebuild, -leechcraft-azoth-0.5.60.ebuild,
  -leechcraft-azoth-0.5.65.ebuild: