@@ -6,6 +6,6 @@ EBUILD leechcraft-azoth-0.5.70.ebuild 2955 SHA256 dd14851e6491c17ab39ffa1050a466
 EBUILD leechcraft-azoth-0.5.75-r1.ebuild 3010 SHA256 0968007ab29de5ae43fe00dd08f22db447932bfc293f4e70733c480bfdf22b87 SHA512 d4aa41ae58f901e43c01e7f48e29ac9fcae6decfd3c7bd3c00eeecd9cca817c2fefaf586d713f2f6ea7b57665f5c77b243d90f0b5c57601144a4219dc03f8941 WHIRLPOOL 68e8657f18c9a1b4d0571521cfd8f8840dcc8dd24b02f51c23332d028c1e2db6c6c238cf916ff8e6df0eee74b030f2f878c16cf887f1e968fef96a34036ef270
 EBUILD leechcraft-azoth-0.5.80.ebuild 3092 SHA256 efaeaaa068968159c4f37f2f4eafd8ed5391fadda6da9b0f4eac469dbbb26119 SHA512 490c75950411b883f3bfe1e25e28cf1de2af15e6a96b54ae1373de7c31318935363b2c273bf779d2bc3513f04d99cc951b4681a07cb7825d4f34f7ad19c2a1bb WHIRLPOOL 34bf05c2c7e1603490aaca4394809823806d6f879555e979761dad94a11924b02b14b521fa028502b42285d6fb20dfb3afd92fee6155c15c5c430071e9febe1e
 EBUILD leechcraft-azoth-0.5.85.ebuild 3084 SHA256 df96e621765f06ddefcd5ee7e87c65b16910034c41d5046464c61aeaac5262df SHA512 ab111ec4b4a3498d96d3e05e194048f25377053cc69728178f29b6ad90767d15b75c5a11b4d6cf8adb62a0d37d8829fb4dfaf5aa4cd6ba9a58abac6fc51b9ad2 WHIRLPOOL 137557dc2785c670c848fc46705ae78db803cae8d6fa6974845004076496131a867defc380839d0d8f715408598076f74905d9c8c5d7ff44fd3d316628fd5b80
-EBUILD leechcraft-azoth-9999.ebuild 3095 SHA256 93e6c54bc1f30ae0062d8d92c1b3ab4d60db4333c84776f903b1dddd29acd226 SHA512 d095514e21e6292294bd8f269a9359a6f3f73a0634b6eab3511032d2216a56f694e1eab83b4e92f45a25459b5606545150fe276a527de6aced22aa25e2b0a670 WHIRLPOOL b594e956bcfbfd6cd0d73b4152edb7333be8b55cccd1b61ba826d53b029f67900e60429b33ab5e3f21bf7d1301d8f6b7e3b9ad575eeea2750dd2081e28df7c74
-MISC ChangeLog 6714 SHA256 bae85f5eb07bd74038513e98efd971fa4707c9d516e8215ca6f2876fc479593c SHA512 0f3cf9acfa9117f58372fa59ea955de9b0d313797558050e7fbb3ff2cc0f9bb6caf2f45c448d2146a5de25a68666191489d99d814cce0bb38a7d48e204e016ad WHIRLPOOL 22f95b0b8b775bf856602814b847203b82625e3915b063e7d854c900d6a7857a406f92f1eb4a2de6297ac2cef67b8f9c3b9fd4e72b629e9c6f116c222d7f087e
-MISC metadata.xml 2565 SHA256 ec7a705e7305adcc7903565ad9d4e948f9f37d0d766d240c3482eea38e836f02 SHA512 2034e4081e2034e34267add89c75f14249df848063a59626038cefcf6be9e5d762e423eca042dcb09b5c4052b9c31debf6da71ed66413824deac4f9f9bae0c4b WHIRLPOOL 2d0b42987b9f24d7a0ba08a36451508b74b884db8febcc5567b56d7b17a7693a22b58aeebad6bb364a81fe242881a1727be5c23dcbfa7beaca488c7ce39c4e0e
+EBUILD leechcraft-azoth-9999.ebuild 3089 SHA256 c7ad20e9e1985cf499be8f9a09678e28bc924f5deb4fc41bb25309f8096e5707 SHA512 2236eb29b25bd1b8f33c81815b49900cbaefdd65a5d4641c8047ab2d87b28878c9c9d747959086273e1115095c8327b4a39a21b9454cd4466c4893873d096b49 WHIRLPOOL 208f1f0d66894a412244254bf1193fe16fffdd328f794dbfaad06b2a2df2f33a33174414513b115c731c4d6257312b61193afd9f3a7ce9278ccc513034e31fe1
+MISC ChangeLog 6871 SHA256 a6d8ec935a02786cfd831924b32a764d618dbd59eaad2c42727795d098afa398 SHA512 31f5b8ab66b9c81bf97a5c12025f902ab0f8abebebb808e72c885e5c617dedc044eb95d3e7a48cdf5b53548dc51d7097ce3f48dfacf84c7a602d9bd81d6daaf8 WHIRLPOOL bee969a4a55b0d248d981aff69b583507865a42b7fe9421a5b9aa1573c8b2855a723d0db0d9803556706bc00253b31e386fca03701da079fdcdd07f15261e39a
+MISC metadata.xml 2606 SHA256 46b4e93d81c8bf106e7ff8c64591ed1918228d8a1353a91acae74ef025029b02 SHA512 da1df3c4028e157f27d98991e1a200a59217bb9855d977d8cce1e62dc7fbcf7228d194a5def831b6c8e1726c84224660b1f486b6a0801634f48db205d5bffd16 WHIRLPOOL efd4ae95d52f78212d11e51e5c6f1db9475a11374344c013477bfbf1b04e4ac6a18b139775007067d8169e615a6c25e45b57922f328074fbca8955747cc264de
