@@ -29,6 +29,6 @@
 	<flag name="standardstyles">Build support for standard Azoth styles engine</flag>
 	<flag name="xoox">Build Xoox, gloox-based plugin for XMPP support (deprecated, use 'xmpp' for new versions)</flag>
 	<flag name="xtazy">Build Xtazy for publishing currently playing tune</flag>
-	<flag name="zheet">Build Zheet, libmsn-based plugin for Windows Live Messenger support</flag>
+	<flag name="zheet">Build Zheet, libmsn-based plugin for Windows Live Messenger support (deprecated, use 'msn' for new versions)</flag>
 </use>
 </pkgmetadata>
