@@ -1,6 +1,10 @@
 # ChangeLog for net-im/leechcraft-azoth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.36 2012/11/27 13:57:14 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.37 2012/12/08 08:38:18 pinkbyte Exp $
+
+  08 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft-azoth-9999.ebuild,
+  metadata.xml:
+  Replace USE-flag zheet with USE-flag msn, wrt bug #402833
 
   27 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft-azoth-9999.ebuild,
   metadata.xml:
